# MinGW-SDL2-imgui

./: CMakeLists.txt  README.md  main.cpp
lib/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
src/: sub_module.cpp  sub_module.h
